--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "vaultwarden-cli"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "CLI client for Vaultwarden - retrieve secrets for batch files and environment variables"
 authors = ["Vaultwarden CLI Contributors"]
 
 [dependencies]
-clap = { version = "4.4", features = ["derive"] }
+clap = { version = "4.4", features = ["derive", "env"] }
 tokio = { version = "1.35", features = ["full"] }
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
