--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,80 +1,97 @@
 name: Test
 
+permissions:
+  contents: read
+
 on:
   push:
+    branches:
+      - main
   pull_request:
 
 env:
+  RUST_BACKTRACE: 1
   CARGO_TERM_COLOR: always
+  CLICOLOR: 1
 
 jobs:
-  test:
-    name: Test (${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
+  Test:
+    name: Test
     strategy:
-      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-
+        #os: ["ubuntu-latest", "windows-latest", "macos-latest"]
+        os: ["ubuntu-latest", "macos-latest"]
+        rust: ["stable", "beta"]
+        include:
+          - os: ubuntu-latest
+            rust: "stable"
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-action@stable
-
-      - name: Cache cargo registry
-        uses: actions/cache@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v6
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
         with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
-
-      - name: Build
-        run: cargo build --verbose
-
-      - name: Run tests
-        run: cargo test --verbose
-
-  lint:
+          toolchain: ${{ matrix.rust }}
+      - name: Install Tarpaulin
+        if: runner.os == 'Linux'
+        run: cargo install cargo-tarpaulin
+      - name: Print Cargo Version
+        run: cargo -V
+      - name: Default features
+        run: cargo test --workspace
+      - name: All features
+        run: cargo test --workspace --all-features
+      - name: No-default features
+        run: cargo test --workspace --no-default-features
+      - name: Test Coverage
+        if: runner.os == 'Linux'
+        run: cargo tarpaulin #--fail-under 80
+  Lint:
     name: Lint
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        #os: ["ubuntu-latest", "windows-latest", "macos-latest"]
+        include:
+          - os: ubuntu-latest
+            rust: "stable"
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-action@stable
+      - name: Checkout Repository
+        uses: actions/checkout@v6
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
         with:
-          components: rustfmt, clippy
-
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-lint-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-lint-cargo-
-
+          toolchain: ${{ matrix.rust }}
+          components: clippy, rustfmt
+      - name: Print Cargo Version
+        run: cargo -V
       - name: Check formatting
         run: cargo fmt --all -- --check
-
-      - name: Run clippy
+      - name: clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
-
-  audit:
-    name: Security Audit
-    runs-on: ubuntu-latest
+  Security:
+    name: Audit
+    strategy:
+      matrix:
+        #os: ["ubuntu-latest", "windows-latest", "macos-latest"]
+        include:
+          - os: ubuntu-latest
+            rust: "stable"
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
-
+      - name: Checkout Repository
+        uses: actions/checkout@v6
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: ${{ matrix.rust }}
       - name: Install cargo-audit
         run: cargo install cargo-audit
-
-      - name: Run security audit
+      - name: Print Cargo Version
+        run: cargo -V
+      - name: Security Check
         run: cargo audit
+      - uses: EmbarkStudios/cargo-deny-action@v2
+        with:
+          command: check bans sources advisories
